message and feed servie

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,7 +11,7 @@
 
    <md-card flex="none" layout="column">
        <md-content flex="90" id="message-pane" style="width:800px;
-       background: url(https://media.giphy.com/media/SasDDqOSRclNu/giphy.gif);
+       background: url(https://media.tenor.com/images/a434da76b7f1cee11d44029e13cbb394/tenor.gif);
        background-repeat:no-repeat;
        background-size:cover;
        background-position:right bottom">
